--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my funcionup first blogs project",
   "main": "index.js",
   "scripts": {
-   "start": "nodemon script/index.js"
+    "start": "nodemon scr/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "email-validator": "^2.0.4",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
