--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "material-icon-theme.folders.color": "#90a4ae",
     "material-icon-theme.folders.theme": "classic",
     "editor.mouseWheelZoom": true,
-    "workbench.colorTheme": "Noctis",
+    "workbench.colorTheme": "JellyFish",
     // "workbench.colorTheme": "JellyFish",
     "workbench.iconTheme": "material-icon-theme",
     "files.autoSave": "afterDelay",
